Fixed x overflow

--- a/g/style.css
+++ b/g/style.css
@@ -8,10 +8,9 @@ button {
   padding: 20px;
   text-align: left;
 }
-html{
+html {
   font-family: 'Anton', sans-serif;
-  overflow: visible;
-
+  overflow-x: hidden;
   
 }
 p {
@@ -39,7 +38,7 @@ padding: 4vw;
 }
 h2 {
   font-size: 10px;
-    padding: 10vh 14px 14px 14px;
+    padding: 7vh 14px 0px 14px;
 
 }
 .textjs {
